crates/deadline-cli/tests/cli/snapshots/cli__gui__bundle_gui_submit_no_dir_no_browse_returns_error.snap
---
source: crates/deadline-cli/tests/cli/gui.rs
info:
  program: deadline
  args:
    - bundle
    - gui-submit
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:57861"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:57861"
    AWS_ENDPOINT_URL_S3: "http://localhost:57861"
    AWS_ENDPOINT_URL_STS: "http://localhost:57861"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp3B1io3/config
    DEADLINE_PYTHON: /nonexistent/python3
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp3B1io3
    PATH: ""
---
success: false
exit_code: 1
----- stdout -----
Specify a job bundle directory or run the bundle command with the --browse flag

----- stderr -----
