crates/deadline-cli/tests/cli/snapshots/cli__gui__bundle_help_lists_gui_submit.snap
---
source: crates/deadline-cli/tests/cli/gui.rs
info:
  program: deadline
  args:
    - bundle
    - "--help"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51046"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51046"
    AWS_ENDPOINT_URL_S3: "http://localhost:51046"
    AWS_ENDPOINT_URL_STS: "http://localhost:51046"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpv7hm7M/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpv7hm7M
---
success: true
exit_code: 0
----- stdout -----
Submit Open Job Description job bundles to a Deadline Cloud queue

Usage: deadline bundle <COMMAND>

Commands:
  submit      Submit an Open Job Description job bundle to a Deadline Cloud queue
  gui-submit  Open a GUI to submit an Open Job Description job bundle
  help        Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

----- stderr -----
