crates/deadline-cli/tests/cli/snapshots/cli__gui__config_gui_help_shows_options.snap
---
source: crates/deadline-cli/tests/cli/gui.rs
info:
  program: deadline
  args:
    - config
    - gui
    - "--help"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:51050"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51050"
    AWS_ENDPOINT_URL_S3: "http://localhost:51050"
    AWS_ENDPOINT_URL_STS: "http://localhost:51050"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpc97Aia/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpc97Aia
---
success: true
exit_code: 0
----- stdout -----
Open the workstation configuration settings GUI

Usage: deadline config gui [OPTIONS]

Options:
      --install-gui  Install GUI dependencies if not already installed
  -h, --help         Print help

----- stderr -----
